# GUI-scaling

./: .gitignore  CMakeLists.txt
Demo-1/: CMakeLists.txt
Demo-1/src/: mainwindow.cpp  mainwindow.h
Demo-1/src/central-widget/: centralwidgetcontroller.cpp  centralwidgetcontroller.h
Demo-1/src/dock-widget/: dockwidgetcontroller.cpp  dockwidgetcontroller.h
Demo-1/src/font/: fontassignment.h  fontfactory.cpp  fontfactory.h
Demo-1/src/info-dialog/: dialogmanager.cpp
Demo-1/src/scaling/: iscalingcontroller.h  scalingcontroller.h
Demo-1/src/settings/: settingscontroller.h
Demo-1/src/tools/: scaling.cpp  scaling.h
demo-2/: CMakeLists.txt
demo-2/src/: mainwindow.cpp
demo-2/src/central-widget/: centralwidgetcontroller.cpp
demo-2/src/dock-widget/: dockwidgetcontroller.cpp  dockwidgetcontroller.h
demo-2/src/scrollarea/: customscrollarea.cpp  customscrollarea.h  customscrollbar.cpp  customscrollbar.h
libs/common/: CMakeLists.txt
libs/common/src/scaling/: scalingcontroller.cpp
libs/shared/src/: icontrolwidget.h  isetupui.h
libs/shared/src/font/: fontcontroller.cpp  fontcontroller.h  ifontcontroller.h
libs/shared/src/info-dialog/: dialogmanager.h
